--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
         <hr>
         <a class="help" href="#"><i class="fa fa-question-circle"></i><span class="link-text">Help</span></a>
-        <a class="logout" href="#"><i class="fas fa-sign-out"></i><span class="link-text">Logout</span></a>
+        <a class="logout" href="login.html"><i class="fas fa-sign-out"></i><span class="link-text">Logout</span></a>
     </div>
     <div class="content">
         <hr>
