--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="welcome">
-      <img src="img/Quezon_City.svg.png" alt="LOGO" />
+      <img src="Img/Quezon_City.svg.png" alt="LOGO" />
       <p>Welcome to Digital Certificate and Clearance Issuance</p>
     </div>
 
@@ -35,9 +35,9 @@
         </div>
 
         <div class="icon-container">
-          <img src="img/google.png" alt="google" />
-          <img src="img/facebook.png" alt="facebook" />
-          <img src="img/smartphone-call.png" alt="phone" />
+          <img src="Img/google.png" alt="google" />
+          <img src="Img/facebook.png" alt="facebook" />
+          <img src="Img/smartphone-call.png" alt="phone" />
         </div>
       </form>
     </div>
