--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
           <input type="password" id="password" name="password" placeholder=" " required />
           <label for="password" class="password">Password</label>
           <!-- Eye icon for show/hide password -->
-          <span class="show-password" id="togglePassword">&#128065;</span>
+          <span class="show-password" id="togglePassword">&#128584;</span>
         </div>
 
         <button type="submit">Log in</button>
@@ -84,7 +84,7 @@
 
         // Hardcoded credentials for login (you can customize this)
         const validUsername = "admin";
-        const validPassword = "password123";
+        const validPassword = "admin";
 
         // Get the values entered by the user
         const username = document.getElementById("username").value;
