--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="toggle-btn" onclick="toggleSidebar()">
-            <span class="toggle-text">Collapsed</span>
+            <span class="toggle-text">Collapse menu</span>
             <i id="toggle-icon" class="fas fa-arrow-right"></i> <!-- Arrow icon -->
         </a>
         <div class="sidebar-links">
             <a href="#"><i class="fas fa-columns"></i><span class="link-text">Dashboard</span></a>
-            <a href="#"><i class="fas fa-file-alt"></i><span class="link-text">Document Issuance</span></a>
-            <a href="#"><i class="fas fa-clipboard-list"></i><span class="link-text">Document Status</span></a>
+            <a href="#"><i class="fas fa-file-alt"></i><span class="link-text">Request Document(s)</span></a>
+            <a href="#"><i class="fas fa-clipboard-list"></i><span class="link-text">Document(s) Status</span></a>
             <a href="#"><i class="fas fa-solid fa-clock-rotate-left"></i><span class="link-text">Document History</span></a>
         </div>
             
