--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="toggle-btn" onclick="toggleSidebar()">
-            <span class="toggle-text">Collapsed</span>
+            <span class="toggle-text">Collapse menu</span>
             <i id="toggle-icon" class="fas fa-arrow-right"></i> <!-- Arrow icon -->
         </a>
         <div class="sidebar-links">
