--- a/index.html
+++ b/index.html
@@ -41,7 +41,23 @@
             <div id="time" class="time"></div>
         </div>
         <h2>Overview Dashboard</h2>
-        <p>...</p>
+        <hr>
+        <div class="dashboard-body">
+            <div class="quick-links">
+                <p>Quick Links</p>
+                <ul>
+                    <li><a href="#" class="req">Request Now</a><br></li>
+                    <li><a href="#">Pending Request</a><br><p>10</p></li>
+                    <li><a href="#">History</a><br><p>20</p></li>
+                </ul>
+            </div>            
+            <div class="request-overview">
+                <p>Request Overview</p>
+            </div>
+            <div class="history-overview">
+                <p>History Overview</p>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
