--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,9 +45,9 @@
         <hr>
         <div class="dashboard-body">
             <div class="quick-links">
-                <p>Quick Links</p>
+                <div class="tae"><p>Quick Links</p></div>
                 <ul>
-                    <li><a href="#" class="req">Request Now</a><br><i class="fas fa-file-alt"></i></li>
+                    <li><a href="#" >Request Now</a><br><i class="fas fa-file-alt"></i></li>
                     <li><a href="#">Pending Request</a><br><p>10</p></li>
                     <li><a href="#">History</a><br><p>20</p></li>
                 </ul>
@@ -64,70 +64,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar with Sidebar and Icons</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="sidebar.css">
-    <link rel="stylesheet" href="navbar.css">
-</head>
-<body>
-    <nav class="navbar">
-        <div class="logo">Logo</div>
-        <ul class="nav-links">
-            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
-        </ul>
-    </nav>
-
-    <div id="sidebar" class="sidebar">
-        <a href="javascript:void(0)" class="toggle-btn" onclick="toggleSidebar()">
-            <span class="toggle-text">Collapse menu</span>
-            <i id="toggle-icon" class="fas fa-arrow-right"></i> <!-- Arrow icon -->
-        </a>
-        <div class="sidebar-links">
-            <a href="#"><i class="fas fa-columns"></i><span class="link-text">Dashboard</span></a>
-            <a href="#"><i class="fas fa-file-alt"></i><span class="link-text">Document Issuance</span></a>
-            <a href="#"><i class="fas fa-clipboard-list"></i><span class="link-text">Document Status</span></a>
-            <a href="#"><i class="fas fa-solid fa-clock-rotate-left"></i><span class="link-text">Document History</span></a>
-        </div>
-            
-        <hr>
-        <a class="help" href="#"><i class="fa fa-question-circle"></i><span class="link-text">Help</span></a>
-        <a class="logout" href="login.html"><i class="fas fa-sign-out"></i><span class="link-text">Logout</span></a>
-    </div>
-    <div class="content">
-        <hr>
-        <div class="datetime-container">
-            <div id="date" class="date"></div>
-            <div id="time" class="time"></div>
-        </div>
-        <h2>Overview Dashboard</h2>
-        <hr>
-        <div class="dashboard-body">
-            <div class="quick-links">
-                <p>Quick Links</p>
-                <ul>
-                    <li><a href="#" class="req">Request Now</a><br></li>
-                    <li><a href="#">Pending Request</a><br><p>10</p></li>
-                    <li><a href="#">History</a><br><p>20</p></li>
-                </ul>
-            </div>            
-            <div class="request-overview">
-                <p>Request Overview</p>
-            </div>
-            <div class="history-overview">
-                <p>History Overview</p>
-            </div>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
->>>>>>> 8cba75f0dc825763ee7f91aa308ed5acb179fc88
