--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <hr>
         <div class="dashboard-body">
             <div class="quick-links">
-                <div class="tae"><p>Quick Links</p></div>
+                <p>Quick Links</p>
                 <ul>
                     <li><a href="#" >Request Now</a><br><i class="fas fa-file-alt"></i></li>
                     <li><a href="#">Pending Request</a><br><p>10</p></li>
