Updated HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar with Sidebar and Icons</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="sidebar.css">
@@ -22,7 +22,7 @@
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="toggle-btn" onclick="toggleSidebar()">
             <span class="toggle-text">Collapse menu</span>
-            <i id="toggle-icon" class="fas fa-arrow-right"></i> <!-- Arrow icon -->
+            <i id="toggle-icon" class="fas fa-arrow-right"></i>
         </a>
         <div class="sidebar-links">
             <a href="#"><i class="fas fa-columns"></i><span class="link-text">Dashboard</span></a>
@@ -47,7 +47,7 @@
             <div class="quick-links">
                 <p>Quick Links</p>
                 <ul>
-                    <li><a href="#" >Request Now</a><br><i class="fas fa-file-alt"></i></li>
+                    <li><a href="#">Request Now</a><br><i class="fas fa-file-alt"></i></li>
                     <li><a href="#">Pending Request</a><br><p>10</p></li>
                     <li><a href="#">History</a><br><p>20</p></li>
                 </ul>
