Updated HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -51,12 +51,32 @@
                     <li><a href="#">Pending Request</a><br><p>10</p></li>
                     <li><a href="#">History</a><br><p>20</p></li>
                 </ul>
-            </div>            
-            <div class="request-overview">
-                <p>Request Overview</p>
             </div>
-            <div class="history-overview">
-                <p>History Overview</p>
+            <div class="overviews">            
+                <div class="column" id="request-overview">
+                    <p>Request Overview</p>
+                    <table>
+                        <tr>
+                            <th>ID</th>
+                            <th>Document Nme</th>
+                            <th>Code</th>
+                            <th>Type</th>
+                            <th>Date Issued</th>
+                        </tr>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Sample Docs 1</td>
+                                <td>DOC001</td>
+                                <td>PDF</td>
+                                <td>2024-09-14</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="column" id="history-overview"">
+                    <p>History Overview</p>
+                </div>
             </div>
         </div>
     </div>
