--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
         <a class="logout" href="login.html"><i class="fas fa-sign-out"></i><span class="link-text">Logout</span></a>
     </div>
     <div class="content">
-        <hr>
-        <div class="datetime-container">
-            <div id="date" class="date"></div>
-            <div id="time" class="time"></div>
+        <div class="heading-body">
+            <hr>
+                <div class="datetime-container">
+                    <div id="date" class="date"></div>
+                    <div id="time" class="time"></div>
+                </div>               
+                <h2>Overview Dashboard</h2>
+            <hr>
         </div>
-        <h2>Overview Dashboard</h2>
-        <hr>
         <div class="dashboard-body">
             <div class="quick-links">
                 <p>Quick Links</p>
@@ -68,6 +70,13 @@
                                 <td>1</td>
                                 <td>Sample Docs 1</td>
                                 <td>DOC001</td>
+                                <td>PDF</td>
+                                <td>2024-09-14</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Sample Docs 2</td>
+                                <td>DOC002</td>
                                 <td>PDF</td>
                                 <td>2024-09-14</td>
                             </tr>
