--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <table>
                         <tr>
                             <th>ID</th>
-                            <th>Document Nme</th>
+                            <th>Document Name</th>
                             <th>Code</th>
                             <th>Type</th>
                             <th>Date Issued</th>
