--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="#" class="see-more">see more...</a>
+                    <a href="#" class="see-more">see more</a>
                 </div>
                 <div class="column" id="overview">
                     <p>History Overview</p>
