--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <nav class="navbar">
+    <div class="navbar">
         <div class="logo">Logo</div>
         <ul class="nav-links">
             <li><a href="#"><i class="fa-solid fa-inbox"></i></a></li>
             <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
         </ul>
-    </nav>
-
+    </div>
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="toggle-btn" onclick="toggleSidebar()">
             <span class="toggle-text">Collapse menu</span>
@@ -121,6 +120,13 @@
                                 <td>2</td>
                                 <td>Sample Docs 2</td>
                                 <td>DOC002</td>
+                                <td>PDF</td>
+                                <td>2024-09-14</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Sample Docs 3</td>
+                                <td>DOC003</td>
                                 <td>PDF</td>
                                 <td>2024-09-14</td>
                             </tr>
